Fix screenshots on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -263,7 +263,7 @@ li {
 	}
 	
 	.screenshots {
-		width: 90%;
+		width: 65%;
 	}
 }
 
